# test-infra

./: .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .lintrunner.toml  .mypy_requirements.txt  .shellcheckrc  .sqlfluff  .terraform.lock.hcl  2023-04-10.md  2023-05-01.md  2023-07-24.md  2024-10-14.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  claudehistory.md  cliff.toml  disabled-tests-condensed.json  do_release.sh  git-file-age.sh  lint.json  main.tf  mypy.ini  outputs.tf  pyproject.toml  send_log_results.txt  t.json  test-emojiis.md  test.txt  test_dummy_file.py  variables.tf  x.sh
.ci/: Dockerfile  build.sh
aws/lambda/log-classifier/: Cargo.toml  README.md  ruleset.toml
aws/lambda/log-classifier/data/: README.md  log_classifier_dataset_query_2024-08-14.csv
aws/lambda/log-classifier/experimental/: log_chunker.py
aws/lambda/log-classifier/fixtures/: error_log1.txt  error_log_multiple_matches.txt  request.json
aws/lambda/log-classifier/scripts/: download_logs.py
aws/lambda/log-classifier/src/: bedrock.rs  engine.rs  lib.rs  log.rs  main.rs  network.rs  rockset.rs  rule.rs  rule_match.rs
aws/tools/cleanup-common/: Cargo.toml
aws/tools/cleanup-common/src/: batch.rs  lib.rs  time.rs
aws/tools/cleanup-runners/: Cargo.toml  README.md
aws/tools/cleanup-runners/src/: cleanup.rs  ec2_client.rs  filter.rs  github_client.rs  lib.rs  main.rs
aws/tools/cleanup-ssm/: Cargo.toml  README.md
aws/tools/cleanup-ssm/src/: cleanup.rs  client.rs  filter.rs  lib.rs  main.rs
aws/tools/user-data-diff/: .gitignore  Cargo.toml  README.md
aws/tools/user-data-diff/src/: client.rs  decoder.rs  diff.rs  lib.rs  main.rs
cli-tools/gpu-dev-cli/: README.md  ZERO_CONFIG_SETUP.md  minimal-iam-policy.json  pyproject.toml
cli-tools/gpu-dev-cli-rust/: Cargo.toml  README.md
cli-tools/gpu-dev-cli-rust/src/: auth.rs  config.rs  main.rs  reservations.rs  test_state.rs
cli-tools/gpu-dev-cli/gpu_dev_cli/: __init__.py  auth.py  cli.py  config.py  interactive.py  reservations.py  test_state.py
osdc/: .gitignore  CLAUDE.md  pyproject.toml
osdc/admin/: README.md  generate_stats.py  requirements.txt
osdc/cli-tools/gpu-dev-cli/: README.md
osdc/cli-tools/gpu-dev-cli/gpu_dev_cli/: __init__.py  auth.py  cli.py  config.py  disks.py  interactive.py  name_generator.py  reservations.py  ssh_proxy.py
osdc/docs/: devgpu-features.html
osdc/terraform-gpu-devservers/: README.md  alb.tf  availability.tf  backend.tf  ecr.tf  efs.tf  eks.tf  expiry.tf  kubernetes.tf  lambda.tf  main.tf  monitoring.tf  outputs.tf  queue.tf  s3-disk-contents.tf  ssh-proxy-service.tf  ssh-proxy.tf  switch-to.sh  variables.tf
osdc/terraform-gpu-devservers/docker/: .dockerignore  Dockerfile  backup-dotfiles  bash_profile  bashrc  bashrc_ext  motd_script  nproc_wrapper  profile  restore-dotfiles-version  setup-dotfiles-persistence  shell_env  ssh_config  zprofile  zshrc  zshrc_ext
osdc/terraform-gpu-devservers/docker-example/: Dockerfile
osdc/terraform-gpu-devservers/migrations/: backfill_snapshot_contents.py  backfill_snapshot_contents.py.bak  check_snapshots.py  migrate_disks_to_named.py  run_backfill.sh
osdc/terraform-gpu-devservers/scripts/: CLEANUP_GUIDE.md  detect_empty_volumes.sh  ec2_avail_probe.sh  inspect_user_data.sh
osdc/terraform-gpu-devservers/ssh-proxy/: Dockerfile  proxy.py  requirements.txt
osdc/terraform-gpu-devservers/templates/: al2023-cpu-user-data.sh  al2023-user-data.sh  user-data-self-managed.sh  user-data.sh
radar/: .editorconfig  .gitignore  .markdownlint.yaml  .shellcheckrc  .yamllint.yaml  CLAUDE.md  README.md  justfile  mise.toml  pyproject.toml
radar/scripts/: mise-activate.sh
radar/src/radar/: __init__.py  __main__.py  act.py  cli.py  config.py  core.py  guards.py  log.py  plan.py  runner.py
radar/tests/: conftest.py  test_act.py  test_cli.py  test_config.py  test_core.py  test_guards.py  test_log.py  test_plan.py  test_runner.py
tools/benchmark/: README.md  ReadMe.md  benchmark_query_group_data.schema.json  generate.sh  pyproject.toml  requirements.txt  zod-generate.sh
tools/benchmark/cli/: __init__.py  cli.py  fetch_group_data_controller.py
tools/benchmark/data-models/: benchmark_query_group_data_model.py
tools/benchmark/data_models/: benchmark_query_group_data_model.py
tools/benchmark/scripts/: benchmark_execu_analysis.py
tools/bosco/: README.md  pyproject.toml
tools/bosco/bosco/: __init__.py  __main__.py  github.py  main.py  model.py  ui.py
tools/bosco/scripts/: README.md  black.py  coverage.py  flake8.py  mypy.py  pyproject.toml  pytest.py  query_pr.py
tools/bosco/tests/: test_github.py  test_model.py
tools/flake-test-fail-autorevert/: .env.example  .gitignore  README.md  flake_test_fail_autorevert_2026-07-01_2026-07-14.csv  pyproject.toml
tools/flake-test-fail-autorevert/flake_test_fail_autorevert/: __init__.py  __main__.py  client.py  logic.py  premerge.py  queries.py
tools/flake-test-fail-autorevert/tests/: test_client.py  test_logic.py  test_main.py  test_premerge.py  test_queries.py  test_report_aggregate.py  test_report_load.py  test_report_premerge.py  test_report_render.py
tools/flake8-torch/: .gitignore  pyproject.toml  requirements-dev.txt
tools/flake8-torch/flake8_torch/: checker.py  deprecated_symbols.yaml
tools/flake8-torch/tests/: test_flake8_torch.py
tools/pkg-helpers/: .gitattributes  Makefile  README.md  pyproject.toml
tools/pkg-helpers/pkg_helpers/: __main__.py  determine_conda.py  version_suffix.py
tools/pkg-helpers/pytorch_pkg_helpers/: __main__.py  conda.py  cuda.py  macos.py  upload_whl_metadata.py  utils.py  version.py  version_suffix.py  wheel.py
tools/pkg-helpers/tests/: test_conda.py  test_cuda.py  test_macos.py  test_utils.py  test_version.py  test_wheel.py
tools/remote_execution/blast/: __init__.py  pyproject.toml  requirements.txt
tools/torchfix/: .flake8  README.md  pyproject.toml  requirements-dev.txt
tools/torchfix/tests/: test_torchfix.py
tools/torchfix/torchfix/: __main__.py  common.py  deprecated_symbols.yaml  torchfix.py
(+4570 files in other folders)
