[package]
name = "lintrunner"
version = "0.5.1"
authors = ["Michael Suo <suo@fb.com>"]
edition = "2018"
description = "A lint running tool and framework."
license = "BSD-3-Clause"

[dependencies]
structopt = "0.3.25"
anyhow = "1.0"
glob = "0.3"
tempfile = "3.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
textwrap = {version = "0.14", features = ["terminal_size"]}
similar = {version = "2.1.0", features = ["inline"]}
console = "0.15"
toml = "0.5.8"
log = "0.4.0"
env_logger = "0.9.0"
indicatif = "0.16.2"
regex = "1.5"

[dev-dependencies]
assert_cmd = "2.0"
insta = {version = "1.8.0", features = ["redactions"]}
