[package]
name = "lintrunner"
version = "0.8.0"
authors = ["Michael Suo <suo@fb.com>"]
edition = "2021"
description = "A lint running tool and framework."
license = "BSD-3-Clause"

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
anyhow = "1.0.56"
glob = "0.3.0"
tempfile = "3.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
textwrap = { version = "0.15.0", features = ["terminal_size"] }
similar = { version = "2.1.0", features = ["inline"] }
console = "0.15.0"
toml = "0.5.9"
log = "0.4.16"
env_logger = "0.9.0"
indicatif = "0.16.2"
regex = "1.5.5"
itertools = "0.10.3"
directories = "4.0.1"
blake3 = "1.3.1"

[dev-dependencies]
assert_cmd = "2.0.4"
insta = { version = "1.14.0", features = ["redactions"] }
