[package]
name = "gpu-dev-cli"
version = "0.1.0"
edition = "2021"
description = "Fast Rust CLI tool for PyTorch GPU developer server reservations"
authors = ["PyTorch Team"]

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.1"
aws-sdk-sqs = "1.15"
aws-sdk-dynamodb = "1.15"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
config = "0.13"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"