[tool.poetry]
name = "gpu-dev-cli"
version = "0.1.0"
description = "CLI tool for PyTorch GPU developer server reservations"
authors = ["PyTorch Team"]
readme = "README.md"
packages = [{include = "gpu_dev_cli"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.0"
boto3 = "^1.34.0"
requests = "^2.31.0"
pydantic = "^2.5.0"
rich = "^13.7.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
gpu-dev = "gpu_dev_cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true