[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-benchmark-tools"
description = "Benchmark library and CLI tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []
authors = [
  { name = "Yang Wang", email = "elainewy@meta.com" }
]

[project.scripts]
fetch-execu-benchmark = "pytorch_benchmark_lib.cli.benchmark_execu_analysis:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pytorch_benchmark_lib*"]
