[project]
name = "TorchFix"
dynamic = ["version"]
dependencies = ["flake8>=3.8.2", "PyYAML", "libcst>=0.4.9,<0.5.0"]

[project.entry-points]
"flake8.extension" = {TOR = "torchfix.torchfix:TorchChecker"}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = [
  "."
]

[tool.black]
exclude = "tests/fixtures/*"

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "torchfix.torchfix.__version__"}
