[project]
name = "TorchFix"
dynamic = ["version"]
dependencies = ["flake8>=3.8.2", "PyYAML", "libcst>=1.1.0,<1.2.0"]

[project.scripts]
torchfix = "torchfix.__main__:main"

[project.entry-points]
"flake8.extension" = {TOR = "torchfix.torchfix:TorchChecker"}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = [
  "."
]

[tool.black]
exclude = "tests/fixtures/*"

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.mypy]
exclude = ["tests/fixtures", "build"]

[tool.setuptools.dynamic]
version = {attr = "torchfix.torchfix.__version__"}
