[package]
name = "log_classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.6.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.6.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = "1.0.64"
aws-config = "0.48.0"
aws-sdk-s3 = "0.18.0"
flate2 = "1.0.24"
http = "0.2.8"
once_cell = "1.14.0"
rayon = "1.5.3"
regex = "1.6.0"
serde_json = "1.0.85"
url = "2.2.2"
bytes = "1.2.1"
toml = "0.5.9"
native-tls = { version = "0.2.10", features = ["vendored"] }
aws-sdk-dynamodb = "0.18.0"
serde_dynamo = { version = "4.0.6", features = ["aws-sdk-dynamodb+0_18"] }

  [dependencies.serde]
  version = "1.0.144"
  features = [ "derive" ]

  [dependencies.tokio]
  version = "1.21.0"
  features = [ "full" ]
