[package]
name = "cleanup-common"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.0"
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"