[package]
name = "cleanup-ssm"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.0"
aws-sdk-dynamodb = "1.80.0"
aws-sdk-ssm = "1.81.0"
clap = { version = "4.5.40", features = ["derive"] }
indicatif = "0.17.11"
tokio = { version = "1.45.1", features = ["full"] }
chrono = "0.4"
aws-smithy-types = "1.3"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
